make sure the code element does not wrap

--- a/src/assets/02-styles.css
+++ b/src/assets/02-styles.css
@@ -167,6 +167,7 @@ header nav {
   background: var(--color-code-background);
   border: 1px dashed var(--color-code-border);
   padding: 0 .5em;
+  white-space: nowrap;
 }
 
 .header__title  {
